; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftVdp1ReadFrameBuffer.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftVdp1ReadFrameBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vdp1backframebuffer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VIDSoftVdp1ReadFrameBuffer(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = call i32 (...) @VidsoftWaitForVdp1Thread()
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %29 [
    i32 0, label %10
    i32 1, label %17
    i32 2, label %26
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* @vdp1backframebuffer, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @T1ReadByte(i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = bitcast i8* %15 to i32*
  store i32 %14, i32* %16, align 4
  br label %30

17:                                               ; preds = %3
  %18 = load i32, i32* @vdp1backframebuffer, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @T1ReadWord(i32 %18, i32 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @BSWAP16L(i32 %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = bitcast i8* %24 to i32*
  store i32 %23, i32* %25, align 4
  br label %30

26:                                               ; preds = %3
  %27 = load i8*, i8** %6, align 8
  %28 = bitcast i8* %27 to i32*
  store i32 0, i32* %28, align 4
  br label %30

29:                                               ; preds = %3
  br label %30

30:                                               ; preds = %29, %26, %17, %10
  ret void
}

declare dso_local i32 @VidsoftWaitForVdp1Thread(...) #1

declare dso_local i32 @T1ReadByte(i32, i32) #1

declare dso_local i32 @T1ReadWord(i32, i32) #1

declare dso_local i32 @BSWAP16L(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
